--- a/knowabccont.html
+++ b/knowabccont.html
@@ -3,24 +3,34 @@
   <head>
   <title></title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  	
- 
   <link rel="stylesheet" href="jquery.mobile-1.1.0.min.css" />
   <link rel="stylesheet" href="jquery-ui.css" />
   <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="lightbox.css" />
-  <script src="jquery-1.9.1.js"></script>
-    <script src="jquery-1.7.1.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="jquery.fancybox.css">
+    <link rel="stylesheet" type="text/css" href="normalize.css">   
+  <link rel="stylesheet" type="text/css" href="result-light.css">
+  
+  <!--  <script src="jquery-1.9.1.js"></script>-->
+  <script src="jquery-1.7.1.min.js"></script>
   <script src="jquery-ui.js"></script>
   <script src="jquery.mobile-1.1.0.min.js"></script>
- <script src="lightbox.js"></script> 
-  
- 
+  <script type='text/javascript' src="jquery.fancybox.pack.js"></script>
   <script>
-   $(document).ready(function(){
- 
-
-   });
+ $(window).load(function(){
+$(document).ready(function() {
+    // initialize the lightbox 
+    $('.fancybox').fancybox({
+        beforeLoad: function() {
+            var windowsize = $(window).width();
+            // test the viewport size to see if it's smaller than 480px
+            if (windowsize < 480) {
+                // cancel the lightbox and load the link url
+                $.fancybox.cancel();
+            }
+        }
+    });
+});
+});//]]>  
   $(function(){
 $('#donebtn').live("click",function()
 {
@@ -128,13 +138,13 @@ $(document).on('swiperight', 'article', function(event){
         without control, leading to 
         formation of a tumor.</p>
         <br/>
-        <!--     <div id="an-obj-2" class="gallery clearfix"> 
-<a href="1-07.png" rel="prettyPhoto"><img src="whatisimg.png" width="195" height="193"/></a>        
-        </div> -->
-      <div class="single"> <a rel="lightbox" href="1-07.png">
-              <div> <img src="whatisimg.png"  class="centerimg"></div>       </a> 
-       </div>
-        <!--    <a href="1-07.png" rel="prettyPhoto"><img src="whatisimg.png" width="195" height="193" class="centerimg"/></a> 
+     <a class="fancybox" rel="gallery1" href="1-07.png">
+    <img src="whatisimg.png" alt="" class="centerimg"/>
+</a>
+        <!--  <div class="single"> <a rel="lightbox" href="1-07.png">
+          <div> <img src="whatisimg.png"  class="centerimg"></div>
+          </a> </div>
+          <a href="1-07.png" rel="prettyPhoto"><img src="whatisimg.png" width="195" height="193" class="centerimg"/></a> 
        <p> <img src="whatisimg.png" width="195" height="193" class="centerimg"/> </p>--> 
       </div>
     <div class="clear"> </div>
