--- a/knowabccont.html
+++ b/knowabccont.html
@@ -3,7 +3,7 @@
   <head>
   <title></title>
   <meta name="viewport" content="width=device-width, initial-scale=1" >
-    <script src="jquery-1.7.1.min.js"></script>
+  
   <link rel="stylesheet" href="jquery.mobile-1.1.0.min.css" />
   <link rel="stylesheet" href="jquery-ui.css" />
   <link rel="stylesheet" href="style.css" />
@@ -12,9 +12,9 @@
   <link rel="stylesheet" type="text/css" href="result-light.css">
   
   <!--  <script src="jquery-1.9.1.js"></script>-->
-
+  <script src="jquery-1.7.1.min.js"></script>
   <script src="jquery-ui.js"></script>
-  <script src="jquery.mobile-1.1.0.min.js"></script>
+   <script src="http://code.jquery.com/mobile/latest/jquery.mobile.js"></script>
   <script type='text/javascript' src="jquery.fancybox.pack.js"></script>
  
   <script>
