--- a/selfcheckcont.html
+++ b/selfcheckcont.html
@@ -13,13 +13,14 @@
   <!--  <script src="jquery-1.9.1.js"></script>-->
   <script src="jquery-1.7.1.min.js"></script>
   <script src="jquery-ui.js"></script>
-   <script src="jquery.mobile.js"></script>
+   <script src="jquery.mobile-1.3.1.min.js"></script>
   <script type='text/javascript' src="jquery.fancybox.pack.js"></script>
   <script>
   $(window).load(function(){
 $(document).ready(function() {
     // initialize the lightbox 
     $('.fancybox').fancybox({
+		arrows:false,
         beforeLoad: function() {
             var windowsize = $(window).width();
             // test the viewport size to see if it's smaller than 480px
