--- a/assesmentresult.html
+++ b/assesmentresult.html
@@ -139,7 +139,7 @@ $.mobile.defaultPageTransition = 'none';
      <!--   <div id="assesheadertext"> </div>-->
       <table id="wrapper">
           <tr>
-            <td> <img src="assesriskheader.png" /></td>
+             <td> <!--<img src="assesriskheader.png" />--> Assess Risk</td>
           </tr>
         </table>
       </div>
