--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="jquery.mobile-1.1.0.min.css" />
 <link rel="stylesheet" href="jquery-ui.css" />
-<link rel="stylesheet" href="jquery.mobile.simpledialog.min.css" />
+
 <link rel='stylesheet' type='text/css' href="style.css"/>
-<link rel='stylesheet' media='screen and (max-device-width: 400px)' href="medium.css" />
+<!--<link rel='stylesheet' media='screen and (max-device-width: 400px)' href="medium.css" />-->
 <script src="jquery-1.9.1.js"></script>
 <script src="jquery-ui.js"></script>
 <script src="jquery-1.7.1.min.js"></script>
