--- a/assessrisk.html
+++ b/assessrisk.html
@@ -22,7 +22,7 @@ $('#factors').live("click",function()
 $(function(){
 $('#asses').live("click",function()
 {
-	  window.location = 'riskcalc.html#riskcalc1'
+	  window.location = 'alert.html'
 });
 });
 $(function(){
