--- a/assessriskcont.html
+++ b/assessriskcont.html
@@ -154,7 +154,7 @@ $('#calculate').live("click",function()
         responsible for about 5-10% of breast
         cancer cases. </p>
         <p>
-      <div class="ui-block-a"><a href="riskcalc.html#riskcalc1" data-role="button" rel="external" id="riskbtn" > Assess your breast cancer risk</a></div>
+      <div class="ui-block-a"><a href="alert.html" data-role="button" rel="external" id="riskbtn" > Assess your breast cancer risk</a></div>
         </p>
       </div>
     <div class="clear"> </div>
@@ -204,7 +204,7 @@ $('#calculate').live("click",function()
         as menopausal hormone therapy),
         pregnancy, and genetics.</p>
         <p>
-      <div class="ui-block-a"><a href="riskcalc.html#riskcalc1" data-role="button" rel="external" id="riskbtn" > Assess your breast cancer risk</a></div>
+      <div class="ui-block-a"><a href="alert.html" data-role="button" rel="external" id="riskbtn" > Assess your breast cancer risk</a></div>
         </p>
       </div>
     <div class="clear"> </div>
@@ -258,7 +258,7 @@ $('#calculate').live("click",function()
         adolescence when the breasts were still
         developing. </p>
         <p>
-      <div class="ui-block-a"><a href="riskcalc.html#riskcalc1" data-role="button" rel="external" id="riskbtn" > Assess your breast cancer risk</a></div>
+      <div class="ui-block-a"><a href="alert.html" data-role="button" rel="external" id="riskbtn" > Assess your breast cancer risk</a></div>
         </p>
       </div>
     <div class="clear"> </div>
@@ -304,7 +304,7 @@ $('#calculate').live("click",function()
         been found to slightly increase the risk of
         breast cancer. </p>        
         <p>
-     <div class="ui-block-a"><a href="riskcalc.html#riskcalc1" data-role="button" rel="external" id="riskbtn" > Assess your breast cancer risk</a></div>
+     <div class="ui-block-a"><a href="alert.html" data-role="button" rel="external" id="riskbtn" > Assess your breast cancer risk</a></div>
         </p>
       </div>
     <div class="clear"> </div>
@@ -357,7 +357,7 @@ $('#calculate').live("click",function()
         <p> Alcohol consumption 
         increases the risk of breast cancer. </p>
         <p>
-   <div class="ui-block-a"><a href="riskcalc.html#riskcalc1" data-role="button" rel="external" id="riskbtn" > Assess your breast cancer risk</a></div>
+   <div class="ui-block-a"><a href="alert.html" data-role="button" rel="external" id="riskbtn" > Assess your breast cancer risk</a></div>
         </p>
       </div>
     <div class="clear"> </div>
@@ -403,7 +403,7 @@ $('#calculate').live("click",function()
         <p> Regular physical activity
         reduces the risk of breast cancer. </p>
         <p>
-   <div class="ui-block-a"><a href="riskcalc.html#riskcalc1" data-role="button" rel="external" id="riskbtn" > Assess your breast cancer risk</a></div>
+   <div class="ui-block-a"><a href="alert.html" data-role="button" rel="external" id="riskbtn" > Assess your breast cancer risk</a></div>
         </p>
       </div>
     <div class="clear"> </div>
