--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="jquery-ui.css" />
 
 <link rel='stylesheet' type='text/css' href="style.css"/>
-<!--<link rel='stylesheet' media='screen and (max-device-width: 400px)' href="medium.css" />-->
+<link rel='stylesheet' media='screen and (max-device-width: 400px)' href="medium.css" />
 <script src="jquery-1.9.1.js"></script>
 <script src="jquery-ui.js"></script>
 <script src="jquery-1.7.1.min.js"></script>
@@ -35,7 +35,7 @@ $('#selfcheck').live("click",function()
 $(function(){
 $('#findcenter').live("click",function()
 {
-	  window.location = 'findcenter.html'
+	  window.location = 'alert_center.html'
 });
 });
 $(function(){
@@ -71,7 +71,7 @@ $(document).ready(function() {
       <div class="clear"> </div>
  <div id="topmenu2" class="centeredmenu">
         <ul>
-              <li class="ui-block-a"><a href="findcenter.html" data-role="button" rel="external" id="mainbtn">Find Centers</a></li>
+              <li class="ui-block-a"><a href="alert_center.html" data-role="button" rel="external" id="mainbtn">Find Centers</a></li>
               <li class="ui-block-a"><a href="reminder.html" data-role="button" rel="external" id="mainbtn">Reminder</a></li>  
               </ul>
  <!--      <div class="ui-block-a"><a href="findcenter.html" data-role="button" rel="external" id="mainbtn">Find Centers</a></div>
