--- a/reminder.html
+++ b/reminder.html
@@ -39,7 +39,7 @@ $('#donebtn').live("click",function()
       <div id="main-content">
         <div id="main"> <!-- start main -->
           <div id="message"> <!-- start message --> 
-            <img src="sorry.png" alt="Sorry!" id="sorry" width="347" height="72" />
+            <img src="sorry.png" alt="Sorry!" id="sorry" width="80%" />
             <p>Our App is currently under construction.</p>
             <!-- you can enter your own customised message here -->
             <p>We'll be done soon!</p>
