--- a/riskcalc.html
+++ b/riskcalc.html
@@ -65,8 +65,8 @@ any breast cancer or of ductal carcinoma
 in situ (DCIS) or lobular carcinoma in situ
 (LCIS)? </label>
 <div class="clear"> </div>
-        <button type="button" value="1" id="history1" onclick="checkHistory(this.value)" class="calcbtn">Yes</button>
-        <button type="button" value="0" id="history2" onclick="checkHistory(this.value)" class="calcbtn">No</button>
+        <button type="button" value="1" id="history1" onClick="checkHistory(this.value)" class="calcbtn">Yes</button>
+        <button type="button" value="0" id="history2" onClick="checkHistory(this.value)" class="calcbtn">No</button>
       </form>
     </div>
     <div class="clear"> </div>
@@ -106,7 +106,7 @@ in situ (DCIS) or lobular carcinoma in situ
       <form id="risk" name="risk">
         <label for="current_age">2. What is your age?</label>
         <div class="clear"> </div>
-        <select onchange="checkAge()" size="1" name="current_age" id="current_age">
+        <select onChange="checkAge()" size="1" name="current_age" id="current_age">
           <option value="99">Select</option>
           <option value="34">&lt; 35</option>
           <option value="35">35</option>
@@ -197,10 +197,10 @@ in situ (DCIS) or lobular carcinoma in situ
       <form id="risk3" name="risk3">
         <label for="age_at_menarche">3. What was your age at the time of your first menstrual period?</label>
         <div class="clear"> </div>
-        <button type="button" value="99" id="age_at_menarche2" onclick="getage_at_menarche(this.value)" class="calcbtn">Unknown</button>
-        <button type="button" value="10" id="age_at_menarche3" onclick="getage_at_menarche(this.value)" class="calcbtn">7 to 11</button>
-        <button type="button" value="13" id="age_at_menarche4" onclick="getage_at_menarche(this.value)" class="calcbtn">12 to 13</button>
-        <button type="button" value="14" id="age_at_menarche5" onclick="getage_at_menarche(this.value)" class="calcbtn">&gt; =14</button>
+        <button type="button" value="99" id="age_at_menarche2" onClick="getage_at_menarche(this.value)" class="calcbtn">Unknown</button>
+        <button type="button" value="10" id="age_at_menarche3" onClick="getage_at_menarche(this.value)" class="calcbtn">7 to 11</button>
+        <button type="button" value="13" id="age_at_menarche4" onClick="getage_at_menarche(this.value)" class="calcbtn">12 to 13</button>
+        <button type="button" value="14" id="age_at_menarche5" onClick="getage_at_menarche(this.value)" class="calcbtn">&gt; =14</button>
       </form>
       <div class="clear"> </div>
     </div>
@@ -237,12 +237,12 @@ in situ (DCIS) or lobular carcinoma in situ
       <form id="risk4" name="risk4">
         <label for="age_at_first_live_birth">4. What was your age at the time of the first live birth of your child?</label>
         <div class="clear"> </div>
-        <button type="button" value="99" id="age_at_first_live_birth2" onclick="getage_at_first_live_birth(this.value)" class="calcbtn">Unknown</button>
-        <button type="button" value="0" id="age_at_first_live_birth3" onclick="getage_at_first_live_birth(this.value)" class="calcbtn">No Births</button>
-        <button type="button" value="15" id="age_at_first_live_birth4" onclick="getage_at_first_live_birth(this.value)" class="calcbtn">&lt; 20</button>
-        <button type="button" value="22" id="age_at_first_live_birth5" onclick="getage_at_first_live_birth(this.value)" class="calcbtn">20 to 24</button>
-        <button type="button" value="27" id="age_at_first_live_birth6" onclick="getage_at_first_live_birth(this.value)" class="calcbtn">25 to 29</button>
-        <button type="button" value="30" id="age_at_first_live_birth7" onclick="getage_at_first_live_birth(this.value)" class="calcbtn">&gt; =30</button>
+        <button type="button" value="99" id="age_at_first_live_birth2" onClick="getage_at_first_live_birth(this.value)" class="calcbtn">Unknown</button>
+        <button type="button" value="0" id="age_at_first_live_birth3" onClick="getage_at_first_live_birth(this.value)" class="calcbtn">No Births</button>
+        <button type="button" value="15" id="age_at_first_live_birth4" onClick="getage_at_first_live_birth(this.value)" class="calcbtn">&lt; 20</button>
+        <button type="button" value="22" id="age_at_first_live_birth5" onClick="getage_at_first_live_birth(this.value)" class="calcbtn">20 to 24</button>
+        <button type="button" value="27" id="age_at_first_live_birth6" onClick="getage_at_first_live_birth(this.value)" class="calcbtn">25 to 29</button>
+        <button type="button" value="30" id="age_at_first_live_birth7" onClick="getage_at_first_live_birth(this.value)" class="calcbtn">&gt; =30</button>
       </form>
       <div class="clear"> </div>
     </div>
@@ -280,10 +280,10 @@ in situ (DCIS) or lobular carcinoma in situ
       <form id="risk5" name="risk5">
         <label for="related_with_breast_cancer">5. How many of your first-degree relatives -mother, sisters, daughters - have had breast cancer?</label>
         <div class="clear"> </div>
-        <button type="button" value="99" id="related_with_breast_cancer2" onclick="getrelated_with_breast_cancer(this.value)">Unknown</button>
-        <button type="button" value="0" id="related_with_breast_cancer3" onclick="getrelated_with_breast_cancer(this.value)">0</button>
-        <button type="button" value="1" id="related_with_breast_cancer4" onclick="getrelated_with_breast_cancer(this.value)">1</button>
-        <button type="button" value="2" id="related_with_breast_cancer5" onclick="getrelated_with_breast_cancer(this.value)">&gt; 1</button>
+        <button type="button" value="99" id="related_with_breast_cancer2" onClick="getrelated_with_breast_cancer(this.value)">Unknown</button>
+        <button type="button" value="0" id="related_with_breast_cancer3" onClick="getrelated_with_breast_cancer(this.value)">0</button>
+        <button type="button" value="1" id="related_with_breast_cancer4" onClick="getrelated_with_breast_cancer(this.value)">1</button>
+        <button type="button" value="2" id="related_with_breast_cancer5" onClick="getrelated_with_breast_cancer(this.value)">&gt; 1</button>
       </form>
       <div class="clear"> </div>
     </div>
@@ -321,9 +321,9 @@ in situ (DCIS) or lobular carcinoma in situ
       <form id="risk6" name="risk6">
         <label for="ever_had_biopsy">6. Have you ever had a breast biopsy?</label>
         <div class="clear"> </div>
-        <button type="button" value="99" id="ever_had_biopsy1" onclick="checkBiopsy(this.value);">Unknown</button>
-        <button type="button" value="0" id="ever_had_biopsy2" onclick="checkBiopsy(this.value);">No</button>
-        <button type="button" value="1" id="ever_had_biopsy3" onclick="checkBiopsy(this.value);">Yes</button>
+        <button type="button" value="99" id="ever_had_biopsy1" onClick="checkBiopsy(this.value);">Unknown</button>
+        <button type="button" value="0" id="ever_had_biopsy2" onClick="checkBiopsy(this.value);">No</button>
+        <button type="button" value="1" id="ever_had_biopsy3" onClick="checkBiopsy(this.value);">Yes</button>
         <div class="clear"> </div>
         <label for="previous_biopsies">6a. How many breast biopsies (positive or negative) have you had?</label>
         <div class="clear"> </div>
@@ -341,16 +341,16 @@ in situ (DCIS) or lobular carcinoma in situ
         <label for="biopsy_with_hyperplasia">6b. Have you had at least one breast biopsy with atypical hyperplasia?</label>
         <div class="clear"> </div>
         <div id="btn4" style="display:none">
-          <button type="button" value="99" id="biopsy_with_hyperplasia1" onclick="test1(this.value);" >N/a</button>
+          <button type="button" value="99" id="biopsy_with_hyperplasia1" onClick="test1(this.value);" >N/a</button>
         </div>
         <div id="btn5" style="display:none">
-          <button type="button" value="99" id="biopsy_with_hyperplasia2" onclick="test1(this.value);" >Unknown</button>
+          <button type="button" value="99" id="biopsy_with_hyperplasia2" onClick="test1(this.value);" >Unknown</button>
         </div>
         <div id="btn6" style="display:none">
-          <button type="button" value="0" id="biopsy_with_hyperplasia3" onclick="test1(this.value);">No</button>
+          <button type="button" value="0" id="biopsy_with_hyperplasia3" onClick="test1(this.value);">No</button>
         </div>
         <div id="btn7" style="display:none">
-          <button type="button" value="1" id="biopsy_with_hyperplasia4" onclick="test1(this.value);">Yes</button>
+          <button type="button" value="1" id="biopsy_with_hyperplasia4" onClick="test1(this.value);">Yes</button>
         </div>
       </form>
       <div class="clear"> </div>
@@ -388,39 +388,39 @@ in situ (DCIS) or lobular carcinoma in situ
       <form id="risk7" name="risk7">
         <label for="race">7. What is your race/ethnicity?</label>
         <div class="clear"> </div>
-        <button type="button" value="1" id="race1" onclick="checkEthnicity(this.value)">White</button>
-        <button type="button" value="2" id="race2" onclick="checkEthnicity(this.value)">African American</button>
-        <button type="button" value="3" id="race3" onclick="checkEthnicity(this.value)">Hispanic</button>
-        <button type="button" value="4" id="race4" onclick="checkEthnicity(this.value)">Asian-American</button>
-        <button type="button" value="5" id="race5" onclick="checkEthnicity(this.value)">American Idian or Alaskan Native</button>
-        <button type="button" value="6" id="race6" onclick="checkEthnicity(this.value)">Unknown</button>
+        <button type="button" value="1" id="race1" onClick="checkEthnicity(this.value)">White</button>
+        <button type="button" value="2" id="race2" onClick="checkEthnicity(this.value)">African American</button>
+        <button type="button" value="3" id="race3" onClick="checkEthnicity(this.value)">Hispanic</button>
+        <button type="button" value="4" id="race4" onClick="checkEthnicity(this.value)">Asian-American</button>
+        <button type="button" value="5" id="race5" onClick="checkEthnicity(this.value)">American Idian or Alaskan Native</button>
+        <button type="button" value="6" id="race6" onClick="checkEthnicity(this.value)">Unknown</button>
            <div class="clear"> </div>
         <label for="sub_ethnicity">7a. What is the sub-race/ethnicity</label>
         <div class="clear"> </div>
         <div id="btn71" style="display:none">
-          <button type="button" value="99" id="subrace1" onclick="subrace(this.value)">N/a</button>
+          <button type="button" value="99" id="subrace1" onClick="subrace(this.value)">N/a</button>
         </div>
         <div id="btn72" style="display:none">
-          <button type="button" value="7" id="subrace2" onclick="subrace(this.value)">Chinese</button>
+          <button type="button" value="7" id="subrace2" onClick="subrace(this.value)">Chinese</button>
         </div>
         <div id="btn73" style="display:none">
-          <button type="button" value="8" id="subrace3" onclick="subrace(this.value)">Japanese</button>
+          <button type="button" value="8" id="subrace3" onClick="subrace(this.value)">Japanese</button>
         </div>
         <div id="btn74" style="display:none">
-          <button type="button" value="9" id="subrace4" onclick="subrace(this.value)">Filipino</button>
+          <button type="button" value="9" id="subrace4" onClick="subrace(this.value)">Filipino</button>
         </div>
         <div id="btn75" style="display:none">
-          <button type="button" value="10" id="subrace5" onclick="subrace(this.value)" >Hawaiian</button>
+          <button type="button" value="10" id="subrace5" onClick="subrace(this.value)" >Hawaiian</button>
         </div>
         <div id="btn76" style="display:none">
-          <button type="button" value="11" id="subrace6" onclick="subrace(this.value)">Other Pacific Islander</button>
+          <button type="button" value="11" id="subrace6" onClick="subrace(this.value)">Other Pacific Islander</button>
         </div>
         <div id="btn77" style="display:none">
-          <button type="button" value="12" id="subrace7" onclick="subrace(this.value)">Other Asian-American</button>
+          <button type="button" value="12" id="subrace7" onClick="subrace(this.value)">Other Asian-American</button>
         </div>
            <div class="clear"> </div>
         <div class="calbtn">
-            <input type="button" value="Calculate Risk" id="calculate"/>
+            <input type="button" value="CALCULATE RISK" id="calculate"/>
           </div>
       </form>
       <div class="clear"> </div>
