--- a/assesmentresult.html
+++ b/assesmentresult.html
@@ -14,7 +14,7 @@ $(document).ready(function() {
 	 $(function(){
 $('#donebtn').live("click",function()
 {
-	  window.location = 'index.html'
+	  window.location = 'index_home.html'
 });
 });
 	  var sPageURL = window.location.search.substring(1);
