--- a/knowabc.html
+++ b/knowabc.html
@@ -58,13 +58,13 @@ $('#tips').live("click",function()
 $(function(){
 $('#donebtn').live("click",function()
 {
-	  window.location = 'index.html'
+	  window.location = 'index_home.html'
 });
 });
 $(function(){
 $('#leftnav').live("click",function()
 {
-	  window.location = 'index.html'
+	  window.location = 'index_home.html'
 });
 });
 $(function(){
