--- a/knowabccont.html
+++ b/knowabccont.html
@@ -41,7 +41,7 @@ $(document).ready(function() {
   $(function(){
 $('#donebtn').live("click",function()
 {
-	  window.location = 'index.html'
+	  window.location = 'index_home.html'
 });
 });
 
