--- a/riskcalc.html
+++ b/riskcalc.html
@@ -15,7 +15,7 @@
   $(function(){
 $('#donebtn').live("click",function()
 {
-	  window.location = 'index.html'
+	  window.location = 'index_home.html'
 });
 });
 
