--- a/selfcheck.html
+++ b/selfcheck.html
@@ -14,7 +14,7 @@
   $(function(){
 $('#donebtn').live("click",function()
 {
-	  window.location = 'index.html'
+	  window.location = 'index_home.html'
 });
 });
   </script>
@@ -57,7 +57,7 @@ $('#donebtn').live("click",function()
       <div class="bottomnav">
         <div class="btnnav">
           <div id="leftbtn">
-            <div class="ui-block-a"><a href="index.html" data-role="button" rel="external" id="leftnav"><img src="leftarrow.png" width="37" height="34"/> </a></div>
+            <div class="ui-block-a"><a href="index_home.html" data-role="button" rel="external" id="leftnav"><img src="leftarrow.png" width="37" height="34"/> </a></div>
             <div class="ui-block-b"><a href="selfcheckcont.html#stepone" data-role="button" rel="external" id="rightnav"><img src="rightarrow.png" width="37" height="34"/> </a></div>
           </div>
           <div id="rightlogo"> </div>
