--- a/selfcheckcont.html
+++ b/selfcheckcont.html
@@ -23,10 +23,10 @@ $(document).ready(function() {
 				padding: 0,
 
 				openEffect : 'elastic',
-				openSpeed  : 300,
+				openSpeed  : 700,
 
 				closeEffect : 'elastic',
-				closeSpeed  : 300,
+				closeSpeed  : 1000,
 
 				closeClick : true,
 				
@@ -41,7 +41,7 @@ $(document).ready(function() {
   $(function(){
 $('#donebtn').live("click",function()
 {
-	  window.location = 'index.html'
+	  window.location = 'index_home.html'
 });
 });
 
