--- a/updates.html
+++ b/updates.html
@@ -27,7 +27,7 @@ $('#donebtn').live("click",function()
           <!-- <div id="headertext"> </div>-->
           <table id="wrapper">
             <tr>
-              <td> <!--<img src="remindertext.png" />--> Reminder</td>
+              <td> <!--<img src="remindertext.png" />--> Updates</td>
             </tr>
           </table>
         </div>
